# GroundSealRAG

./: .gitignore  AGENTS.md  PROJECT_BRIEF.md  README.md  TASKS.md  pyproject.toml
corpus/: manifest.yaml
docs/: architecture.md  chunking-baseline.md  citation-model.md  cli-usage.md  design-principles.md  development-plan.md  enterprise-audit-log.md  evaluation-plan.md  evaluation-suite.md  execution-rhythm.md  failure-analysis-plan.md  first-corpus-plan.md  generation-contract.md  hybrid-merge-strategy.md  ingestion-contract.md  open-questions.md  permission-model.md  permission-test-matrix.md  phase-checklist-template.md  resume-scope.md  retrieval-scope.md  roadmap.md  source-freshness-policy.md  source-registration-contract.md
notes/: README.md  embedding-decision.md  phase-checklist-template.md  phase0-consistency-review.md  seed-evaluation-cases.md
reports/: README.md  chunk-size-experiment-report.json  chunk-size-experiment-report.md  code-review-optimization-report.md  follow-up-progress-report.md  m6-milestone-wrap-up.md  phase0-completion-report.md  phase1-ingestion-report.md  phase10-failure-analysis-report.md  phase11-cli-report.md  phase12-generation-report.md  phase13-extensions-report.md  phase2-chunking-report.md  phase3-lexical-baseline-report.md  phase4-semantic-baseline-report.md  phase5-hybrid-report.md  phase6-permission-report.md  phase7-citation-report.md  phase8-rerank-report.md  phase9-eval-suite-report-summary.md  phase9-eval-suite-report.json  phase9-eval-suite-report.md  release-v0.1.0-m6-notes.md  release-v0.1.0-m6.md
(+86 files in other folders)
