[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groundseal"
version = "0.1.0"
description = "Permission-aware hybrid retrieval for grounded enterprise agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26",
    "sentence-transformers>=3.0",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
groundseal = "groundseal.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that load embedding models and full pipeline (slow)",
]
addopts = "-m 'not integration'"
